@@ -8,8 +8,8 @@ android {
 		applicationId "de.christinecoenen.code.zapp"
 		minSdkVersion 19
 		targetSdkVersion 26
-		versionCode 16
-		versionName "1.5.0"
+		versionCode 17
+		versionName "1.6.0"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 	buildTypes {
